swagger updated for sale list
