# src/configs/swagger.json
@@ -1910,13 +1910,43 @@
           "Sale"
         ],
         "summary": " Sale List",
-        "description": "You can send query with endpoint for search[], sort[], page and limit.\r  <ul> Examples:\r  <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r  <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r  <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
+        "description": "\r  You can send query with endpoint for search[], sort[], page and limit.<br><br>\r  For date filtering you can filter with preDefiend keywords or picking custom range;<br>\r  -- for the preDefiend query values are [today, nextWeek, lastWeek]. <br>\r  -- for custom range needed queries are startDate, endDate and dateField.\r  <ul> Examples:\r  <li>endpoint?<b>preDefined=today&dateField=requestedDate</b></li>\r  <li>endpoint?<b>preDefined=lastWeek&dateField=orderDate</b></li>\r  <li>endpoint?startDate=2023-01-01&endDate=2023-01-07&dateField=requestedDate</b></li>\r  <li>URL/?<b>search[field1]=value1&search[field2]=value2</b></li>\r  <li>URL/?<b>sort[field1]=1&sort[field2]=-1</b></li>\r  <li>URL/?<b>page=2&limit=1</b></li>\r  </ul>\r  ",
         "parameters": [
           {
             "name": "showDeleted",
             "in": "query",
             "type": "boolean",
             "description": "Send true to show deleted data as well, default value is false"
+          },
+          {
+            "name": "showQuote",
+            "in": "query",
+            "type": "boolean",
+            "description": "Send true to show quotetions as well (orderDate is Null), default value is false"
+          },
+          {
+            "name": "preDefiend",
+            "in": "query",
+            "type": "string",
+            "description": "exp: [today, nextWeek, lastWeek]"
+          },
+          {
+            "name": "startDate",
+            "in": "query",
+            "type": "string",
+            "description": "Format is YEAR-MONTH-DAY"
+          },
+          {
+            "name": "endDate",
+            "in": "query",
+            "type": "string",
+            "description": "Format is YEAR-MONTH-DAY"
+          },
+          {
+            "name": "dateField",
+            "in": "query",
+            "type": "string",
+            "description": "exp:[requestedDate, orderDate, createdAt, updatedAt]"
           }
         ],
         "responses": {
@@ -2012,7 +2042,7 @@
           {
             "name": "body",
             "in": "body",
-            "description": "   <ul>    <li>Only admin can update status and confirmDate.</li>   <li>When confirmDate  , status also should  ./</li>   <li>sale account will be created when status of sale is approved./</li>   <li>Send the object includes attributes that should be  .</li>   <li>You can update : FirmId, ProductId, quantity, location, requestedDate, status, sideContact and confirmDate.</li>   </ul> ",
+            "description": "   <ul>    <li>Only admin can update status and orderDate.</li>   <li>When orderDate  , status also should  ./</li>   <li>sale account will be created when status of sale is approved./</li>   <li>Send the object includes attributes that should be  .</li>   <li>You can update : FirmId, ProductId, quantity, location, requestedDate, status, sideContact and orderDate.</li>   </ul> ",
             "required": true,
             "schema": {
               "type": "object",
@@ -2041,7 +2071,7 @@
                   "type": "string",
                   "example": "string"
                 },
-                "confirmDate": {
+                "orderDate": {
                   "type": "string",
                   "example": "string"
                 },
